<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Eng_calc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:textSize="36sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_pi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_number"
                    android:text="@string/pi" />

                <Button
                    android:id="@+id/button_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_number"
                    android:text="@string/e" />

                <Button
                    android:id="@+id/button_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Clear_results"
                    android:text="@string/C" />


                <Button
                    android:id="@+id/button_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Delete_last"
                    android:text="@string/delete" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/rev_num_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_uniteral_operation"
                    android:text="@string/reverse_number"
                    tools:text="@string/reverse_number" />

                <Button
                    android:id="@+id/button_degree_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_uniteral_operation"
                    android:text="@string/degree_2" />

                <Button
                    android:id="@+id/button_10_degree_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_uniteral_operation"
                    android:text="@string/ten_degree_x"
                    tools:text="@string/ten_degree_x" />

                <Button
                    android:id="@+id/log_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_bilateral_operation"
                    android:text="@string/log"
                    tools:text="@string/log" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/sin_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_uniteral_operation"
                    android:text="@string/sin"
                    tools:text="@string/sin" />

                <Button
                    android:id="@+id/cos_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_uniteral_operation"
                    android:text="@string/cos"
                    tools:text="@string/cos" />

                <Button
                    android:id="@+id/tg_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_uniteral_operation"
                    android:text="@string/tg"
                    tools:text="@string/tg" />

                <Button
                    android:id="@+id/ctg_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_uniteral_operation"
                    android:text="@string/ctg"
                    tools:text="@string/ctg" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_bilateral_operation"
                    android:text="@string/button_plus" />

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_bilateral_operation"
                    android:text="@string/button_minus" />

                <Button
                    android:id="@+id/button_devide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_bilateral_operation"
                    android:text="@string/button_devide" />

                <Button
                    android:id="@+id/button_multiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_bilateral_operation"
                    android:text="@string/button_multiply" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_numeral"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_numeral"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_numeral"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/button_degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_bilateral_operation"
                    android:text="@string/degree" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_numeral"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_numeral"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_numeral"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/button_factorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_uniteral_operation"
                    android:text="@string/factorial" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_numeral"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_numeral"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_numeral"
                    android:text="@string/nine" />

                <Button
                    android:id="@+id/button_equals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_equals"
                    android:text="@string/equals" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button_sqrt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_uniteral_operation"
                    android:text="@string/sqrt" />

                <Button
                    android:id="@+id/button_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_bilateral_operation"
                    android:text="@string/mod" />

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_numeral"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/button_comma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Set_point"
                    android:text="@string/comma" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <EditText
                    android:id="@+id/start_text_number"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/zero" />

                <EditText
                    android:id="@+id/end_text_number"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/zero" />

                <EditText
                    android:id="@+id/NumberSizeTextNumber"
                    android:layout_width="22dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    tools:text="@string/zero" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/back_button_eng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="Back"
                    android:text="Назад" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>